# pycheck

./: .codecov.yml  .dependably  .dependably-check  .flake8  .gitignore  .gitlab-ci.yml  .snyk  .trufflehog-exclude  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  TEST_SUMMARY.md  pip.conf  pyproject.toml  pytest.ini  readme.md  requirements-dev.txt  requirements.txt  run_tests.py  simple_test_runner.py  sonar-project.properties
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: README.md  ci.yml  release.yml  security.yml
scripts/: install-hooks.sh
src/: __init__.py  checker.py
src/validators/: __init__.py  _pep508.py  config.py  exceptions.py  pip_conf_validator.py  pyproject_validator.py  requirements_validator.py  result.py  runner.py
tests/: __init__.py  conftest.py  test_aliased_imports.py  test_from_imports.py  test_mixed_complex.py
tests/conformance/: test_conformance.py
tests/conformance/dependably/: README.md
tests/conformance/dependably/cases/: discovery-deprecated-filename.json  discovery-explicit-config.json  discovery-prefers-dependably.json  discovery-walkup-finds-repo-root.json  exceptions-common-and-tool-union.json  exceptions-expired.json  exceptions-id-advisory.json  exceptions-package-selector.json  exceptions-package-version-pin.json  exceptions-path-and-symbol-and.json  exceptions-suppressed-still-counted.json  exceptions-unused-warns.json  merge-lists-union-and-dedupe.json  merge-rules-per-id.json  merge-scalar-failon-override.json  sections-alias-read.json  sections-canonical-beats-alias.json  sections-unknown-toplevel-ignored.json  validation-bad-severity.json  validation-exception-bad-expires.json  validation-exception-bad-selector-own-section.json  validation-exception-missing-reason.json  validation-exception-no-selector.json  validation-non-object-root.json  validation-unknown-key-warns.json  validation-unknown-rule-in-common-ignored.json  validation-unknown-rule-own-section-errors.json  validation-version-too-high.json
tests/fixtures/: sample_files.py  test_all_unused.py  test_all_used.py  test_basic_unused.py  test_from_imports.py
tests/fixtures/config/: envref_pip.conf  insecure_pip.conf  invalid_pyproject.toml  invalid_requirements.txt  secret_pip.conf  valid_pip.conf  valid_pyproject.toml  valid_requirements.txt
tests/fixtures/subdir/: test_in_subdir.py
tests/integration/: test_end_to_end.py  test_validate_e2e.py
tests/unit/: test_analyze_imports.py  test_cli.py  test_config.py  test_config_loader.py  test_console_ux.py  test_exceptions.py  test_extract_imports.py  test_extract_references.py  test_file_processing.py  test_import_info.py  test_json_output.py  test_pep508.py  test_pip_conf_validator.py  test_pyproject_validator.py  test_remove_imports.py  test_requirements_validator.py  test_result.py  test_rule_severity.py  test_scope_usage.py  test_special_imports.py
