[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Dependably.pycheck"
version = "1.3.0"
description = "A tool to analyze Python files for unused imports and optionally clean them up"
readme = "readme.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
    {name = "MHiland", email = "michael@dependably.ca"}
]
maintainers = [
    {name = "Dependably"}
]
keywords = ["python", "imports", "static-analysis", "code-quality", "linting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]

# No external dependencies - uses only Python standard library
dependencies = []

# Dev deps are exact-pinned: pycheck's own pinned-versions rule gates this
# file (dogfooding), the same way it gates every validated pyproject.toml.
# Marker-split pins keep the 3.9 CI leg installable (pytest 9 / black 26 /
# mypy 2 all require Python >= 3.10) while newer interpreters get current tools.
[project.optional-dependencies]
dev = [
    "pytest==9.1.1; python_version >= '3.10'",
    "pytest==8.4.2; python_version < '3.10'",
    "black==26.5.1; python_version >= '3.10'",
    "black==25.11.0; python_version < '3.10'",
    "flake8==7.3.0",
    "mypy==2.1.0; python_version >= '3.10'",
    "mypy==1.19.1; python_version < '3.10'",
    # Lets the pyproject validator run on Python < 3.11 (stdlib tomllib is 3.11+).
    # Dev-only: runtime dependencies stay empty.
    "tomli==2.4.1; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/dependably/pycheck"
"Bug Reports" = "https://github.com/dependably/pycheck/issues"
"Source" = "https://github.com/dependably/pycheck"

[project.scripts]
# `pycheck` is the canonical command (matches the package/repo name); the
# import-checker names are kept as backward-compatible aliases.
pycheck = "src.checker:main"
python-import-checker = "src.checker:main"
import-checker = "src.checker:main"

[tool.setuptools]
packages = ["src", "src.validators"]

[tool.setuptools.package-data]
checker = ["py.typed"]

# Black configuration
[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
force-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  # intentional "bad sample" inputs for the checker -- their exact
  # formatting/imports are test data and must not be reformatted
  | tests/fixtures
)/
'''

# MyPy configuration
[tool.mypy]
# Lowest version current mypy will type-check against; the package still
# supports runtime 3.9+ (see [project] requires-python).
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# The validators package supports both the flat layout (tests put src/ on
# sys.path, so sibling modules import as ``checker`` / ``validators.*``) and the
# installed-wheel layout (``src.*``). It also imports the optional ``tomli``
# backport on Python < 3.11. Don't flag those import shims as missing.
[[tool.mypy.overrides]]
module = ["checker", "validators.*", "tomli"]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]